--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "astro build",
-    "dev": "DEPLOY_TARGET=firebase astro dev --port $PORT",
+    "dev": "astro dev --port $PORT",
     "preview": "astro preview",
     "start": "astro dev",
     "format": "biome format --write .",
